fix: update and correct category files